--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <title>文天玩WenTian Play | 我的世界内容下载站🐍 -文天玩网络科技有限公司</title>
+    <title>文天玩WenTian Play | 全职攻略教程(直达站）🐍 -文天玩网络科技有限公司</title>
 </head>
 
 <body>
@@ -66,7 +66,7 @@
 	
 <div id="bottom-outer">
                 <div id="bottom-inner">              
-                    <br>我的世界内容下载站🐍访问量:<span id="result1"></span>
+                    <br>全职攻略教程(直达站）🐍访问量:<span id="result1"></span>
                     <span id="year"></span>
                 </div>
             </div>
@@ -93,5 +93,5 @@
         </div> <!-- end of container -->
     </div> <!-- end of copyright --> 
 <!-- end of copyright -->
-我的世界内容下载站🐍
+全职攻略教程(直达站）🐍
 </html>
