--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <title>文天玩WenTian Play | 全职攻略教程兼祖帝邮箱QQ交流群导航站🐍 -文天玩网络科技有限公司</title>
+    <title>文天玩WenTian Play | 请联系或加入我们🐍 -文天玩网络科技有限公司</title>
 </head>
  
 <body>
